--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
 bundler_args: --without postgres sqlite
 before_script:
   - mysql -e 'create database chiliproject_test;'
-  - cp config/database.ci.yml config/database.yml
+  - cp config/database.mysql.yml config/database.yml
   - bundle exec rake db:migrate
 # script: bundle exec rspec spec
