--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/plugins/chiliproject_project_roles"]
 	path = vendor/plugins/chiliproject_project_roles
 	url = git://github.com/jnv/chiliproject_project_roles.git
+[submodule "vendor/plugins/chiliproject_private_wiki"]
+	path = vendor/plugins/chiliproject_private_wiki
+	url = git://github.com/jnv/chiliproject_private_wiki.git
