Plugin submodule: chiliproject_private_issues

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/plugins/chiliproject_project_group"]
 	path = vendor/plugins/chiliproject_project_group
 	url = git://github.com/jnv/chiliproject_project_group.git
+[submodule "vendor/plugins/chiliproject_private_issues"]
+	path = vendor/plugins/chiliproject_private_issues
+	url = git://github.com/jnv/chiliproject_private_issues.git
