--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vendor/plugins/chiliproject_private_wiki"]
 	path = vendor/plugins/chiliproject_private_wiki
 	url = git://github.com/jnv/chiliproject_private_wiki.git
+[submodule "vendor/plugins/chiliproject_members_view"]
+	path = vendor/plugins/chiliproject_members_view
+	url = git://github.com/jnv/chiliproject_members_view.git
